--- a/CONDA-BUILD/meta.yaml
+++ b/CONDA-BUILD/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "omics-toolkit" %}
-{% set version = "1.3" %}
+{% set version = "1.3.1" %}
 
 package:
   name: "{{ name|lower }}"
@@ -24,6 +24,7 @@ requirements:
     - pandas
     - pybigwig
     - numpy
+    - pysam
     - r-base>=4.3.0
     - r-data.tree
     - r-dplyr
